// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`has.css format 1`] = `
====================================options=====================================
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
li:has(
  path[d="M544,272H480V150.627L523.314,107.314A16,16,0,0,0,500.686,84.687L457.373,128H415a127.00381,127.00381,0,1,0-254,0H118.627L75.314,84.687A16,16,0,1,0,52.686,107.314L96,150.627V272H32a16,16,0,0,0,0,32H96v24a174.98856,174.98856,0,0,0,30.484,98.889L68.687,484.686a15.99972,15.99972,0,1,0,22.627,22.627l55.616-55.616A175.45165,175.45165,0,0,0,272,504h32a175.45165,175.45165,0,0,0,125.07-52.303l55.616,55.616a15.99972,15.99972,0,0,0,22.627-22.627l-57.797-57.797A174.98856,174.98856,0,0,0,480,328V304h64a16,16,0,0,0,0-32ZM288,32.01263A95.99568,95.99568,0,0,1,383,128H193A95.99568,95.99568,0,0,1,288,32.01263ZM448,328c0,79.401-64.598,144-144,144V236a12.00052,12.00052,0,0,0-12-12h-8a12.00052,12.00052,0,0,0-12,12V472c-79.402,0-144-64.599-144-144V160H448Z"]
) {
  display: none;
}

=====================================output=====================================
li:has(
  path[d="M544,272H480V150.627L523.314,107.314A16,16,0,0,0,500.686,84.687L457.373,128H415a127.00381,127.00381,0,1,0-254,0H118.627L75.314,84.687A16,16,0,1,0,52.686,107.314L96,150.627V272H32a16,16,0,0,0,0,32H96v24a174.98856,174.98856,0,0,0,30.484,98.889L68.687,484.686a15.99972,15.99972,0,1,0,22.627,22.627l55.616-55.616A175.45165,175.45165,0,0,0,272,504h32a175.45165,175.45165,0,0,0,125.07-52.303l55.616,55.616a15.99972,15.99972,0,0,0,22.627-22.627l-57.797-57.797A174.98856,174.98856,0,0,0,480,328V304h64a16,16,0,0,0,0-32ZM288,32.01263A95.99568,95.99568,0,0,1,383,128H193A95.99568,95.99568,0,0,1,288,32.01263ZM448,328c0,79.401-64.598,144-144,144V236a12.00052,12.00052,0,0,0-12-12h-8a12.00052,12.00052,0,0,0-12,12V472c-79.402,0-144-64.599-144-144V160H448Z"]
) {
  display: none;
}

================================================================================
`;

exports[`indent.css format 1`] = `
====================================options=====================================
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
:where(input:not([type="button"], [type="reset"], [type="submit"]), textarea, select) {
    /* CSS here */
}

.foooooooooooooooooooo :where(input:not([type="button"], [type="reset"], [type="submit"]), textarea, select) {
    /* CSS here */
}

:is(input:not([type="button"], [type="reset"], [type="submit"]), textarea, select) {
    /* CSS here */
}

.foooooooooooooooooooo :is(input:not([type="button"], [type="reset"], [type="submit"]), textarea, select) {
    /* CSS here */
}

:not(input:not([type="button"], [type="reset"], [type="submit"]), textarea, select) {
    /* CSS here */
}

.foooooooooooooooooooo :not(input:not([type="button"], [type="reset"], [type="submit"]), textarea, select) {
    /* CSS here */
}

=====================================output=====================================
:where(
  input:not([type="button"], [type="reset"], [type="submit"]),
  textarea,
  select
) {
  /* CSS here */
}

.foooooooooooooooooooo
  :where(
    input:not([type="button"], [type="reset"], [type="submit"]),
    textarea,
    select
  ) {
  /* CSS here */
}

:is(
  input:not([type="button"], [type="reset"], [type="submit"]),
  textarea,
  select
) {
  /* CSS here */
}

.foooooooooooooooooooo
  :is(
    input:not([type="button"], [type="reset"], [type="submit"]),
    textarea,
    select
  ) {
  /* CSS here */
}

:not(
  input:not([type="button"], [type="reset"], [type="submit"]),
  textarea,
  select
) {
  /* CSS here */
}

.foooooooooooooooooooo
  :not(
    input:not([type="button"], [type="reset"], [type="submit"]),
    textarea,
    select
  ) {
  /* CSS here */
}

================================================================================
`;

exports[`is.css format 1`] = `
====================================options=====================================
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
:is(ol, ul, menu:unsupported) :is(ol, ul) {
    color: green;
}

:is(ol, ul) :is(ol, ul) ol {
    list-style-type: lower-greek;
    color: chocolate;
}

:is(ol, ul, menu, dir) :is(ol, ul, menu, dir) :is(ul, menu, dir) {
  list-style-type: square;
}

/* Level 0 */
h1 {
  font-size: 30px;
}
/* Level 1 */
:is(section, article, aside, nav) h1 {
  font-size: 25px;
}
/* Level 2 */
:is(section, article, aside, nav) :is(section, article, aside, nav) h1 {
  font-size: 20px;
}
/* Level 3 */
:is(section, article, aside, nav)  :is(section, article, aside, nav)  :is(section, article, aside, nav)  h1 {
  font-size: 15px;
}

some-element:is(::before, ::after) {
  display: block;
}

=====================================output=====================================
:is(ol, ul, menu:unsupported) :is(ol, ul) {
  color: green;
}

:is(ol, ul) :is(ol, ul) ol {
  list-style-type: lower-greek;
  color: chocolate;
}

:is(ol, ul, menu, dir) :is(ol, ul, menu, dir) :is(ul, menu, dir) {
  list-style-type: square;
}

/* Level 0 */
h1 {
  font-size: 30px;
}
/* Level 1 */
:is(section, article, aside, nav) h1 {
  font-size: 25px;
}
/* Level 2 */
:is(section, article, aside, nav) :is(section, article, aside, nav) h1 {
  font-size: 20px;
}
/* Level 3 */
:is(section, article, aside, nav)
  :is(section, article, aside, nav)
  :is(section, article, aside, nav)
  h1 {
  font-size: 15px;
}

some-element:is(::before, ::after) {
  display: block;
}

================================================================================
`;

exports[`pseudo_call.css format 1`] = `
====================================options=====================================
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
div:not(:last-child) {
}

=====================================output=====================================
div:not(:last-child) {
}

================================================================================
`;

exports[`where.css format 1`] = `
====================================options=====================================
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
:where(#p0:checked ~ #play:checked ~ #c1:checked, #p1:checked ~ #play:checked ~ #c2:checked, #p2:checked ~ #play:checked ~ #cO:checked) ~ #result >
#c { display: block; }

:where(ol, ul, menu:unsupported) :where(ol, ul) {
    color: green;
}

:where(ol, ul) :where(ol, ul) ol {
    list-style-type: lower-greek;
    color: chocolate;
}

:is(section.is-styling, aside.is-styling, footer.is-styling) a {
  color: red;
}

:where(section.where-styling, aside.where-styling, footer.where-styling) a {
  color: orange;
}

=====================================output=====================================
:where(
    #p0:checked ~ #play:checked ~ #c1:checked,
    #p1:checked ~ #play:checked ~ #c2:checked,
    #p2:checked ~ #play:checked ~ #cO:checked
  )
  ~ #result
  > #c {
  display: block;
}

:where(ol, ul, menu:unsupported) :where(ol, ul) {
  color: green;
}

:where(ol, ul) :where(ol, ul) ol {
  list-style-type: lower-greek;
  color: chocolate;
}

:is(section.is-styling, aside.is-styling, footer.is-styling) a {
  color: red;
}

:where(section.where-styling, aside.where-styling, footer.where-styling) a {
  color: orange;
}

================================================================================
`;
